...
                    app:endIconTint="#FFFFFF"
                    app:hintTextColor="#FFFFFF"
                    app:startIconDrawable="@drawable/username_icon"
                    app:startIconTint="#FFFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:endIconTint="#FFFFFF"
                    app:hintTextColor="#FFFFFF"
                    app:startIconDrawable="@drawable/password_icon"
                    app:startIconTint="#FFFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF" />
                </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_marginTop="8dp"
                    android:text="Forgot Password?"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#FFFFFF"
                    android:clickable="true"
                    android:focusable="true"
...
