...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/triggerLabel" />

    <TextView
        android:id="@+id/socialSituationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Social Situation"
        android:textColor="@android:color/white"
...
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toStartOf="@+id/createmood"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/createmood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
