...
                    android:id="@+id/lock_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/outline_lock_24" />

                <TextView
                    android:id="@+id/private_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This account is private."
                    android:textColor="#F5F5DC"
                    android:textSize="16sp"
                    android:textStyle="bold"
...
